--- a/public/css/pelanggan.css
+++ b/public/css/pelanggan.css
@@ -6,6 +6,14 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
+.btn-login{
+    background-color: grey;
+    color: #fff!important;
+    padding: 2px 10px;
+    border-radius: 7px;
+    font-size: 14px;
+}
+
 /* navbar */
 .logo {
     font-family: 'Poppins', sans-serif;
